syntax = "proto3";

package chat;

option go_package = "github.com/ave1995/grpc-chat/api/grpc/proto;proto";

// Represents a single chat message
message Message {
    string id = 1;
    string text = 2;
    int64 timestamp = 3;
}

// Acknowledgement from the server
message Ack {
  string message = 1;
}

// Request for fetching a message by ID
message MessageRequest {
  string id = 1;
}


// The ChatService defines gRPC methods for chat
service ChatService {
  // Unary RPC — send a single message, get confirmation
  rpc SendMessage (Message) returns (Ack);

  // Unary RPC — get a single message by ID
  rpc GetMessage (MessageRequest) returns (Message);

  // Bidirectional streaming — real-time chat
  rpc Chat (stream Message) returns (stream Message);
}